<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical" >
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/maintab_toolbar_bg"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@drawable/common_header_bg_sel"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_button_normal" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/back"
            android:background="@drawable/home_bottom_split" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/common_head_back"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/common_head_title"
                style="@style/common_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:singleLine="true"
                android:text="@string/add_oil"/>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/chatfrom_bg_top"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/station"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chatfrom_bg_mid"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/oil_mount"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/oil_mount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chatfrom_bg_bottom"
                android:focusable="false"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/oil_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/oil_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chatfrom_bg_top"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/milage"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/mileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chatfrom_bg_bottom"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chatfrom_bg"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/oil_full"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/yes"
                        android:textColor="@color/grey" />

                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no"
                        android:textColor="@color/grey" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:text="@string/submit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>