<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_grey"
    android:orientation="vertical" >
  <RelativeLayout
  		android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/maintab_toolbar_bg"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/map_back"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@drawable/common_header_bg_sel"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_button_normal" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/map_back"
            android:background="@drawable/home_bottom_split" />
            <TextView
            	android:layout_centerInParent="true"
                android:id="@+id/common_head_title"
                style="@style/common_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="等待救援"/>
             <Button
            android:id="@+id/history_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/head_button_bg"
            android:text="历史订单"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_order"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/taxi_number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/taxi_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/distance"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:hint="@string/hint_data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.baidu.mapapi.map.MapView
                android:id="@+id/mapView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true" >
            </com.baidu.mapapi.map.MapView>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bg_map" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/taxi_over_button"
                android:layout_width="0dp"
                android:background="@drawable/bg_button"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:text="@string/comment" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="0dp"
                 android:gravity="center"
                android:background="@drawable/bg_button"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:contentDescription="@string/call"
                android:text="@string/call_driver" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>