<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical" >
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/maintab_toolbar_bg"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@drawable/common_header_bg_sel"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_button_normal" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/back"
            android:background="@drawable/home_bottom_split" />
            <TextView
            	android:layout_centerInParent="true"
                android:id="@+id/common_head_title"
                style="@style/common_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/oil_info"/>
        <Button
            android:id="@+id/add"
            android:text="加油"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/head_button_bg"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/selected_date"
            android:background="@drawable/bg_arrow_left" />

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/up"
            android:layout_centerHorizontal="true"
            android:text="加油信息"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/selected_date"
            android:background="@drawable/bg_arrow_right" />
    </RelativeLayout>

    <com.ds.tire.addoil.CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >
    </com.ds.tire.addoil.CalendarView>

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/oil_avg"
            android:textSize="18sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/oil_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="18dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/station"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/oil_mount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/oil_mount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/milage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/oil_full"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/is_full"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>